--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,25 +1,16 @@
 <head>
-    <!-- 引入KaTeX的CSS样式 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.css" integrity="sha256-O8RMkKlt1IGKwYyfREICq9Zy1DNOgU0zXCDXrM/h1Hg=" crossorigin="anonymous">
+    <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } });
+    </script>
 
-    <!-- 引入KaTeX的JavaScript库 -->
-    <script src="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.js" integrity="sha256-6R/fxk9b+1bH+y4dfOXAkFfOeOdqozgoU/PfUB5/eFU=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/contrib/auto-render.min.js" integrity="sha256-KmrW4m6Qd7Gr5fflLjC0cezAlRny7HbB8Pj2YOI5D4k=" crossorigin="anonymous"></script>
+    <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({tex2jax: {
+             inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+             processEscapes: true
+           }
+         });
+    </script>
 
-    <!-- 配置KaTeX自动渲染 -->
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            renderMathInElement(document.body, {
-                // 配置选项
-                delimiters: [
-                    {left: "$$", right: "$$", display: true},
-                    {left: "$", right: "$", display: false},
-                    {left: "\\(", right: "\\)", display: false},
-                    {left: "\\[", right: "\\]", display: true}
-                ],
-                // 支持Escaping
-                throwOnError: false
-            });
-        });
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">
     </script>
 </head>
